# solving-permutation-puzzles.rust

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/group/: calculation.rs  free.rs  mod.rs  permutation.rs  special.rs  tree.rs
tests/: member.rs  slp.rs  word.rs
